--- a/Ejercicio1.html
+++ b/Ejercicio1.html
@@ -3,6 +3,11 @@
 	<head>
 		<!-- Header comunes -->
 		<meta charset="UTF-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta
+      		name="viewport"
+      		content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    	/>
 		<title>Ejercicio de Cabeceras</title>
 		<link rel="icon" type="image/x-icon" href="C:\Users\Pc\Desktop\Curso_Devehope\Imagenes\icon.jpg">
 		<meta name="author" content="Miguel Abato Mendoza" />
