Se aplican cambios

--- a/Ejercicio2.html
+++ b/Ejercicio2.html
@@ -47,24 +47,19 @@
 
       <section>
           <h3>Inside the body there are some sections.</h3>
-          <q>This is a quotation:Hello world.</q>
+          This is a quotation:<i>Hello world.</i>
       </section>
 
       <section>
-        <div>
           This is a superscript text:<sup>text</sup>
           <br>
           This is a subscript text:<sub>text</sub>
-        </div>
       </section>
 
       <section>
-        <div>
           is an emphasized text:<em>text</em>
           <br> 
           is a bold text:<strong>text</strong> 
-        </div>
-        
       </section>
     </main>
     <footer>
