--- a/Ejercicio2.html
+++ b/Ejercicio2.html
@@ -34,14 +34,15 @@
       <h2>And along with the second title, they are in the header tag.</h2>
     </header>
 
-    <aside>Tag usually used for the sidebar of a website.However, in order to make it as a sidebar, we need to apply CSS properties.This is an unordered list of links.</aside>
-    <ul>
-      <li><a href="">Link1</a></li>
-      <li><a href="">Link2</a></li>
-      <li><a href="">Link3</a></li>
-      <li><a href="">Link4</a></li>
-      <li><a href="">Link5</a></li>
-    </ul>
+    <aside>Tag usually used for the sidebar of a website.However, in order to make it as a sidebar, we need to apply CSS properties.This is an unordered list of links.
+      <ul>
+        <li><a href="">Link1</a></li>
+        <li><a href="">Link2</a></li>
+        <li><a href="">Link3</a></li>
+        <li><a href="">Link4</a></li>
+        <li><a href="">Link5</a></li>
+      </ul>
+    </aside>
     <main>
       <p>This is the body of the page</p>
 
