se aplican cambios

--- a/Semantica.html
+++ b/Semantica.html
@@ -6,46 +6,54 @@
     <title>Tutorial</title>
 </head>
 <body>
-    <section id="description">
-        <h1><span>Bananas</span>Bread recipe!</h1>
-        <p>This is my favourite banana bread recipe!</p>
-        <h2>Introduction to our recipe</h2>
-        <p>Where're going to walk yo throught step by step how to
-        make to banana bread</p>
-        <br>
-        <p>This is the story all about my banana bread.</p>
-        <pre>
+    <main>
+        <article>
+            <h1><span>Bananas</span>Bread recipe!</h1>
+            <section id="description">
+                <figure>
+                    <img src="C:\Users\Pc\Desktop\Curso_Devehope\Imagenes\platanos.jpg" width="237" height="175" alt="Habido un problema a la hora de cargar la imagen">
+                    <figcaption>Platanos</figcaption>
+                </figure>
+                <p>This is my favourite banana bread recipe!</p>
+                <h2>Introduction to our recipe</h2>
+                <p>Where're going to walk yo throught step by step how to
+                make to banana bread</p>
+                <br>
+                <p>This is the story all about my banana bread.</p>
+                <pre>
 I allways loved banana bread ever since I was a Kid.
 My Mom always cooked it for me!
-        </pre>
-        <blockquote>
-            Banana bread is the best bread in the whole world.
-            - Albert Einstein
-        </blockquote>
-    </section>
-    <hr>
-    <section id="recipe">
-        <h3> Ingredients you'll need</h3>
-        <table>
-            <tr>
-                <th>Bananas</th>
-                <th>Flour</th>
-                <th>Milk</th>
-            </tr>
-            <tr>
-                <td>3 pieces</td>
-                <td>500 grams</td>
-                <td>200 ml</td>
-            </tr>
-        </table>
-        <h3>The steps of the recipe</h3>
-        <ol>
-            <li>Smash the bananas.</li>
-            <li>Add some flour</li>
-            <li>Add some milk</li>
-            <li>Bake the whole mixture!</li>
-        </ol>
-    </section>
-    <a href="https:\\google.com">Read more recipes here</a>
+                </pre>
+                <blockquote>
+                    Banana bread is the best bread in the whole world.
+                    - Albert Einstein
+                </blockquote>
+            </section>
+            <hr>
+            <section id="recipe">
+                <h3> Ingredients you'll need</h3>
+                <table>
+                    <tr>
+                        <th>Bananas</th>
+                        <th>Flour</th>
+                        <th>Milk</th>
+                    </tr>
+                    <tr>
+                        <td>3 pieces</td>
+                        <td>500 grams</td>
+                        <td>200 ml</td>
+                    </tr>
+                </table>
+                <h3>The steps of the recipe</h3>
+                <ol>
+                    <li>Smash the bananas.</li>
+                    <li>Add some flour</li>
+                    <li>Add some milk</li>
+                    <li>Bake the whole mixture!</li>
+                </ol>
+                </section>
+            </article>
+        <a href="https:\\google.com">Read more recipes here</a>
+    </main>
 </body>
 </html>
