--- a/Formularios.html
+++ b/Formularios.html
@@ -6,6 +6,24 @@
 	<title>Document</title>
 </head>
 <body>
-	
+	<form>
+		<label for="Nombre">Nombre:</label>
+		<input type="text" name="Nombre" placeholder="Paco">
+		<label for="Apellido">Apellido:</label>
+		<input type="text" name="Apellido">
+		<br>
+		<input type="checkbox" name="Suscripcion" value="Supcrito">
+		<label for="Suscripcion">Suscripción al Boletin</label>
+		<input type="checkbox" name="terminos" value="acepto">
+		<label for="terminos">Aceptas los terminos</label>
+		<br>
+		<input type="radio" id="naranja"name="fruta preferida" value="naranja">
+		<label for="naranja">Naranja</label>
+		<input type="radio" id="sandia" name="fruta preferida" value="sandia">
+		<label for="sandia">Sandia</label>
+		<input type="radio" id="melon"  name="fruta preferida" value="melon">
+		<label for="melon">Melon</label>
+		<button>Enviar</button>
+	</form>
 </body>
 </html>
