--- a/Formularios.html
+++ b/Formularios.html
@@ -23,6 +23,37 @@
 		<label for="sandia">Sandia</label>
 		<input type="radio" id="melon"  name="fruta preferida" value="melon">
 		<label for="melon">Melon</label>
+		<br>
+		<label for="enviar">Enviar</label>
+		<input type="button" name="enviar" value="enviar">
+		<br>
+		<label for="color">Color</label>
+		<input type="color" name="color">
+		<br>
+		<label for="fecha">Fecha</label>
+		<input type="date" name="fecha">
+		<br>
+		<label for="email">Email</label>
+		<input type="email" name="email">
+		<br>
+		<label for="fichero">Fichero</label>
+		<input type="file" name="fichero">
+		<br>
+		<label for="numero">Numero</label>
+		<input type="number" name="numero">
+		<br>
+		<label for="pass">Contrasenia</label>
+		<input type="password" name="pass">
+		<br>
+		<label for="rango">Rango</label>
+		<input type="range" name="rango">
+		<br>
+		<label for="hora">Hora</label>
+		<input type="time" name="hora">
+		<br>
+		<label for="url">Url</label>
+		<input type="url" name="url">
+		<br>
 		<button>Enviar</button>
 	</form>
 </body>
