--- a/Ejercicio4.html
+++ b/Ejercicio4.html
@@ -17,14 +17,14 @@
             <a href="#">Home</a>
             <a href="https:\\google.com">Link</a>
             <select> 
-                <option>
+                <option selected disabled>
                     Dropdown
                 </option>
                 <option>
                     Activo
                 </option>
             </select>
-            <a href="#" disable>Disable</a>
+            <button disabled>Disabled</button>
             <form>
                 <input type="search" name="Search">
                 <input type="submit" value="Search">
