--- a/Ejercicio4.html
+++ b/Ejercicio4.html
@@ -26,7 +26,7 @@
             </select>
             <button disabled>Disabled</button>
             <form>
-                <input type="search" name="Search">
+                <input type="search" name="Search" placeholder="Search" value="busquedad">
                 <input type="submit" value="Search">
             </form>
             
