--- a/Ejercicio5.html
+++ b/Ejercicio5.html
@@ -8,7 +8,7 @@
 <body>
     <main>
         <picture>
-            <img src="prueba.jpg" width="474" height="355" alt="" title="Image cap">
+            <img src="prueba.jpg" width="474" height="355" alt="perrito" title="Image cap">
             <h1>Card title</h1>
             <pre>
 Some quick example text to build
@@ -16,19 +16,21 @@ on the card title and make up the
 bulk of the card's content.
             </pre>
         </picture>
-        <picture>
-            <p>An item</p>
-        </picture>
-        <picture>
-            <p>A second item</p>
-        </picture>
-        <picture>
-            <p>A third item</p>
-        </picture>
-        <picture>
-            <a href="#">Card link</a>
-            <a href="#">Another link</a>
-        </picture>
+        <article>
+            <section>
+                <p>An item</p>
+            </section>
+            <section>
+                <p>A second item</p>
+            </section>
+            <section>
+                <p>A third item</p>
+            </section>
+            <section>
+                <a href="#">Card link</a>
+                <a href="#">Another link</a>
+            </section>
+        </article>
     </main>
 	
 </body>
