--- a/Ejercicio9.html
+++ b/Ejercicio9.html
@@ -21,7 +21,7 @@ Crea una página de blog HTML.
             <section>
                 <h1>Mi primer Blog</h1>
                 <p>Este es mi primer diseño solo utilizando HTML</p>
-                <img src="C:\Users\Pc\Desktop\Curso_Devehope\Imagenes\icon.jpg" alt="Escudo del Betis">
+                <img src="icon.jpg" alt="Escudo del Betis">
             </section>
         </article>
         <form>
